<resources>
    <string name="app_name" translatable="false">Playlist Maker</string>

    <string name="main_header" translatable="false">Playlist Maker</string>
    <string name="search_button">Поиск</string>
    <string name="settings_button">Настройки</string>
    <string name="library_button">Медиатека</string>
    <string name="dark_theme_switcher">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support_button">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>




</resources>