<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_blue"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/main_header"
            android:textColor="@color/white"
            android:textSize="22sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:text="@string/search_button"
            android:textAllCaps="false"
            android:textColor="@color/main_font_black"
            android:textSize="22sp"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_font_black"
            app:cornerRadius="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:text="@string/library_button"
            android:textAllCaps="false"
            android:textColor="@color/main_font_black"
            android:textSize="22sp"
            app:icon="@drawable/library"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_font_black"
            app:cornerRadius="16dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            android:backgroundTint="#fff"
            android:text="@string/settings_button"
            android:textAllCaps="false"
            android:textColor="@color/main_font_black"
            android:textSize="22sp"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            app:iconTint="@color/main_font_black"
            app:cornerRadius="16dp" />
    </LinearLayout>
</LinearLayout>