<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:paddingStart="4dp"
        android:paddingEnd="54dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:background="@color/white"
            android:layout_gravity="start"
            android:src="@drawable/back_arrow" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:paddingStart="12dp"
            android:paddingEnd="86dp"
            android:paddingTop="10dp"
            android:paddingBottom="12dp"
            android:text="@string/settings_button"
            android:textColor="@color/black"
            android:textSize="22sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/dark_theme_switcher"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/white"
            android:src="@drawable/share" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="12dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/support_button"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/white"
            android:src="@drawable/support" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:paddingEnd="12dp" >
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="start"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@color/white"
            android:src="@drawable/arrow_forward" />
    </LinearLayout>
</LinearLayout>